--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Satoshi";
+  src: url("assets/Fonts/Satoshi-Regular.otf") format("truetype");
+}
+
+.font-Satoshi-variable {
+  font-family: "Satoshi", sans-serif;
+}
+
+*{
+  cursor: none;
+}
